--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(array2tag)
 export(ascii2lm)
+export(drishti2array)
 export(fcsv2array)
 export(morpho.volume)
 export(plotOutliers_percentile)
