--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(fcsv2array)
 export(morpho.volume)
 export(plotOutliers_percentile)
 export(pp2array)
+export(pp2lm)
 export(tag2array)
 export(tag2lm)
 export(write.fcsv)
